--- a/style.css
+++ b/style.css
@@ -477,7 +477,8 @@ footer .edit-link {
   margin: 0 0.25rem; }
 
 .navbar-nav .nav-link {
-  padding: 0.5rem; }
+  padding: 0.5rem;
+  text-align: center; }
 
 .navbar-nav .nav-link.active {
   background: rgba(250, 250, 250, 0.2); }
@@ -1026,9 +1027,6 @@ body.page .crunchify-social {
   #masthead .navbar-main .navbar-nav .nav-link {
     text-align: center; }
 
-  .navbar-brand {
-    margin: 0 auto !important; }
-
   .site-branding.withfullbanner {
     min-height: 100px !important; }
 
@@ -1036,6 +1034,9 @@ body.page .crunchify-social {
     float: none !important;
     width: 100%; } }
 @media (max-width: 767px) {
+  .navbar-brand {
+    margin: 0 auto !important; }
+
   #masthead .navbar-toggler {
     width: 100%; } }
 @media (max-width: 991px) {
